# EasyEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: Algorithm.cpp.96D4E7777E2AC33C.idx  Algorithm.h.D637F88636903CB9.idx  Basic.cpp.B4619B63780EEB4B.idx  Basic.h.59942624321E6801.idx  Components.cpp.952648506D88AAEC.idx  Components.h.73A5B7885EB93300.idx  Core.cpp.9194088039F8B44E.idx  Core.h.3B006C481B98A27B.idx  Resources.cpp.8B0CB222BADEE841.idx  Resources.h.9049A6DB5F70FFE5.idx  Scene.cpp.1D581C5E776EB935.idx  Scene.h.9268EA6C7F1DBFC3.idx  main.cpp.92B37A5983EC3902.idx  preinclude.h.36A55F4E15BB17CA.idx
assets/: Button.psd  Demo.psd  text.txt
build-scripts/: build.sh  vars.sh
cmake/: EasyEngineConfig.cmake.in
docs/: Doxyfile  build.md  mainpage.md  quickstart.md
docs/html/: _algorithm_8h.html  _algorithm_8h.js  _algorithm_8h_source.html  _basic_8h.html  _basic_8h.js  _basic_8h_source.html  _components_8h.html  _components_8h.js  _components_8h_source.html  _core_8h.html  _core_8h.js  _core_8h_source.html  _resources_8h.html  _resources_8h.js  _resources_8h_source.html  _scene_8h.html  _scene_8h.js  _scene_8h_source.html  _transition_8h.html  _transition_8h.js  _transition_8h_source.html  annotated.html  annotated_dup.js  class_easy_engine_1_1_algorithm-members.html  class_easy_engine_1_1_algorithm.html  class_easy_engine_1_1_audio_system-members.html  class_easy_engine_1_1_audio_system.html  class_easy_engine_1_1_audio_system.js  class_easy_engine_1_1_b_g_m-members.html  class_easy_engine_1_1_b_g_m.html  class_easy_engine_1_1_b_g_m.js  class_easy_engine_1_1_components_1_1_animation-members.html  class_easy_engine_1_1_components_1_1_animation.html  class_easy_engine_1_1_components_1_1_animation.js  class_easy_engine_1_1_components_1_1_animator-members.html  class_easy_engine_1_1_components_1_1_animator.html  class_easy_engine_1_1_components_1_1_animator.js  class_easy_engine_1_1_components_1_1_b_g_m-members.html  class_easy_engine_1_1_components_1_1_b_g_m.html  class_easy_engine_1_1_components_1_1_b_g_m.js  (+316 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_2a.js  all_2b.js  all_2c.js  all_2d.js  all_2e.js  all_2f.js  all_3.js  all_30.js  all_31.js  all_32.js  all_33.js  (+194 more)
docs/man/man3/: Address.3  Algorithm.h.3  Basic.h.3  Block.3  ComplexData.3  Components.3  Components.h.3  Core.h.3  EasingCurve.3  EasyEngine.3  EasyEngine_Algorithm.3  EasyEngine_AudioSystem.3  EasyEngine_AudioSystem_Audio.3  EasyEngine_BGM.3  EasyEngine_Components_Animation.3  EasyEngine_Components_Animator.3  EasyEngine_Components_BGM.3  EasyEngine_Components_Collider.3  EasyEngine_Components_Collider_Container_Shape.3  EasyEngine_Components_Container.3  EasyEngine_Components_Control.3  EasyEngine_Components_Control_Container_Self.3  EasyEngine_Components_Element.3  EasyEngine_Components_Entity.3  EasyEngine_Components_Font.3  EasyEngine_Components_FrameAnimation.3  EasyEngine_Components_FrameTimer.3  EasyEngine_Components_Layer.3  EasyEngine_Components_SFX.3  EasyEngine_Components_Scene.3  EasyEngine_Components_Spirit.3  EasyEngine_Components_Spirit_Properties.3  EasyEngine_Components_Sprite.3  EasyEngine_Components_SpriteGroup.3  EasyEngine_Components_Sprite_Properties.3  EasyEngine_Components_Timer.3  EasyEngine_Components_Trigger.3  EasyEngine_Components_Video.3  EasyEngine_Cursor.3  EasyEngine_Cursor_UserCustom.3  (+61 more)
examples/: CMakeLists.txt  Entity.cpp  Font.cpp  Other.cpp  draft.cpp  main.cpp  scene.cpp
examples/components/: font.cpp  scene.cpp
examples/quickstart/: main.cpp
examples/template/: CMakeLists.txt
src/: Algorithm.cpp  Algorithm.h  Basic.cpp  Basic.h  Components.cpp  Components.h  Core.cpp  Core.h  Resources.cpp  Resources.h  Scene.cpp  Scene.h  Transition.cpp  Transition.h  preinclude.h
test/: CMakeLists.txt  main.cpp
